[package]
name = "refresh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ version = "4.4.2", features = ["derive"] }
bunt ={ version = "0.2.8"}
notify = {version = "6.1.1"}
human-panic = { version = "1.0.2"}