[package]
name = "refrsh"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["reload", "rust", "cli"]
readme = "README.md"
authors = ["Ishan Joshi <noobscience@duck.com>"]
description = "A Simple Hot Reload Application for your apps"
repository = "https://github.com/newtoallofthis123/refresh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ version = "4.4.2", features = ["derive"] }
bunt ={ version = "0.2.8"}
notify = {version = "6.1.1"}
human-panic = { version = "1.0.2"}